appscore/Orchestration_v2/orch_Jobs.yml
#configuration : Jobs
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jobs-deployment
  labels:
    app: api-jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-jobs-pod
  template:
    metadata:
      labels:
        app: api-jobs-pod
    spec:
      containers:
      - name: api-jobs-cont
        image: bart120/yv-api-jobs:1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "4m"
          limits:
            memory: "1500Mi"
            cpu: "1"
            
#service Jobs           
apiVersion: v1
kind: Service
metadata:
  name: service-api-jobs
spec:
  selector:
    app: api-jobs-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
