appscore/Orchestration_v2/orch_identity.yml
#configuration : identity
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-identity-deployment
  labels:
    app: api-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-identity-pod
  template:
    metadata:
      labels:
        app: api-identity-pod
    spec:
      containers:
      - name: api-identity-cont
        image: bart120/yv-api-identity:1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "0.5"
          limits:
            memory: "1500Mi"
            cpu: "1"
      
#service identity     
apiVersion: v1
kind: Service
metadata:
  name: service-api-identity
spec:
  selector:
    app: api-identity-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
