appscore/Orchestration_v2/orch_web.yml
#configuration : web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - name: web-cont
        image: bart120/yv-web:1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "900Mi"
            cpu: "4m"
          limits:
            memory: "2000Mi"
            cpu: "1"

#service web          
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  selector:
    app: web-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
